--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <app-root></app-root>
+    <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.3.0/dist/dotlottie-wc.js" type="module"></script>
   </body>
 </html>
